// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TitleWrapper/> render() should render with a link 1`] = `
<Fragment>
  <CardHeaderTitle>
    <CardHeaderIcon
      alt="Chat"
      src="test-file-stub"
    />
    <a
      href="https://foo.bar/?baz=BAZ"
      rel="noopener noreferrer"
      target="_blank"
    >
      <span>
        Chat
      </span>
    </a>
  </CardHeaderTitle>
</Fragment>
`;

exports[`<TitleWrapper/> render() should render without link 1`] = `
<Fragment>
  <CardHeaderTitle>
    <CardHeaderIcon
      alt="Chat"
      src="test-file-stub"
    />
    <span>
      Chat
    </span>
  </CardHeaderTitle>
</Fragment>
`;
